# domain-checker

./: CMakeLists.txt  Dockerfile
include/: core.h  domain-checker.h
src/: core.cpp  main.cpp
